version/0.23/_sources/api/solver/_autosummary/settings/shadow.rst.txt
:orphan:

.. _shadow:

shadow
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.shadow.shadow
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`shadow_child <shadow_child>`


.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`boundary_conditions <boundary_conditions>`       Enter the boundary conditions menu.

================================================   =======================================

